--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node esbuild.config.js  && nodemon dist/server.js",
-    "build": "npm install && node esbuild.config.js --prod",
+    "build": "pnpm install && node esbuild.config.js --prod",
     "start": "node dist/server.mjs",
     "format": "prettier --write \"src/**/*.ts\""
   },
@@ -31,6 +31,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "esbuild-plugin-alias": "^0.2.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
